# chainlink-solana

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  .prettierignore  .tool-versions  Anchor.toml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  events.md  flake.nix  go.mod  go.sum  go.work  go.work.sum  id.json  jest.config.js  package.json  shell.nix  solana.nix  sonar-project.properties  tsconfig.json
.github/: actionlint.yaml  dependabot.yml  pull_request_template.md
.github/workflows/: changesets.yml  chaos.yml  codeql-analysis.yml  contract-release.yml  dependency-updates.yml  e2e.yml  e2e_custom_cl.yml  e2e_soak.yml  e2e_testnet_daily.yml  gauntlet-release.yml  gauntlet-serum-multisig-release.yml  gauntlet-solana-contracts-release.yml  gauntlet-solana-release.yml  gauntlet.yml  golangci-lint.yml  integration-tests-publish.yml  lint-gh-workflows.yml  lint_scripts_workflows.yml  monitoring.yml  nix-packages-test.yml  open-pr.yml  relay.yml  rust.yml  soak.yml  solana-packages-test.yml  sonar-scan.yml  unit-testing-and-static-analysis.yml  upstream-tracker.yml
cmd/ingestor/: README.md  main.go
cmd/monitoring/: README.md  main.go
cmd/plugin/: main.go
cmd/relay/: main.go
cmd/sub/: main.go
cmd/tools/: inspect.go
contracts/: Anchor.toml  Cargo.toml  Dockerfile  README.md  anchor-generate.sh  package-lock.json  package.json  pnpm-lock.yaml  set_declare_ids.sh  tsconfig.json
contracts/artifacts/localnet/: access_controller-keypair.json  access_controller-keypair.pub  deviation_flagging_validator-keypair.json  deviation_flagging_validator-keypair.pub  ocr2-keypair.json  ocr2-keypair.pub  ocr_2-keypair.json  store-keypair.json  store-keypair.pub
contracts/crates/arrayvec/: Cargo.toml
contracts/crates/arrayvec/src/: lib.rs
contracts/crates/chainlink-solana/: Cargo.toml  README.md
contracts/crates/chainlink-solana/src/: lib.rs
contracts/examples/chainlink-solana-demo/: .gitignore  Anchor.toml  README.md  client.js
contracts/examples/chainlink-solana-demo/programs/chainlink_solana_demo/src/: lib.rs
contracts/examples/chainlink-solana-demo/tests/: chainlink-solana-demo-int-test.ts  chainlink-solana-demo.ts
contracts/examples/hello-world/: Anchor.toml  README.md  client.js  package.json  pnpm-lock.yaml  tsconfig.json
contracts/examples/hello-world/programs/hello-world/: Cargo.toml
contracts/examples/hello-world/programs/hello-world/src/: lib.rs
contracts/examples/hello-world/tests/: hello-world.ts
contracts/migrate/: .gitignore  deploy.js  migrate.sh
contracts/programs/access-controller/: Cargo.toml
contracts/programs/access-controller/src/: lib.rs
contracts/programs/deviation-flagging-validator/: Cargo.toml
contracts/programs/deviation-flagging-validator/src/: lib.rs
contracts/programs/keystone-forwarder/: Cargo.toml
contracts/programs/keystone-forwarder/src/: lib.rs
contracts/programs/ocr2/: Cargo.toml
contracts/programs/ocr2/src/: context.rs  event.rs  lib.rs  state.rs
contracts/programs/ocr_2/: Cargo.toml
contracts/programs/ocr_2/src/: lib.rs  state.rs
contracts/programs/store/: Cargo.toml
contracts/programs/store/src/: lib.rs  state.rs
contracts/tests/: forwarder.spec.ts  ocr2.spec.ts
docs/: InspectingContracts.md  README.md  RunningE2eTests.md
docs/gauntlet/: README.md  gauntlet-setup.md  withdraw.md
docs/multisig/: README.md  serum-setup.md
docs/relay/: MetricsLogging.md  README.md
docs/txm/: README.md
example/: Cargo.toml
example/src/: lib.rs
examples/spec/: ocr2-bootstrap.spec.toml  ocr2-oracle-simple.spec.toml  ocr2-oracle.spec.toml
gauntlet/: .eslintrc.json  .prettierrc.json  README.md  jest.config.js  package.json  tsconfig.base.json  tsconfig.json
gauntlet/patches/: @project-serum+anchor+0.21.0.patch
integration-tests/: README.md  default.toml  go.mod  go.sum  test.Dockerfile  test.Dockerfile.dockerignore
integration-tests/common/: common.go  test_common.go
integration-tests/config/: config.go  ocr2_config.go
integration-tests/devnet/: environment.go
integration-tests/gauntlet/: gauntlet_solana.go
integration-tests/scripts/: buildTestImage  buildTests  entrypoint
integration-tests/smoke/: ocr2_test.go  ocr2upgrade_test.go
integration-tests/soak/: ocr2_soak_test.go  ocr2_test.go  soak_runner_test.go
integration-tests/solclient/: access_controller.go  deployer.go  ocr2.go  solclient.go  store.go
integration-tests/testconfig/: configs_embed.go  default.toml  testconfig.go
integration-tests/utils/: offchainConfig.go  project_path.go
ops/: Dockerfile  Pulumi.localnet.yaml  Pulumi.yaml  README.md  go.mod  go.sum  main.go  package.json
ops/monitoring/: Dockerfile  docker-compose.yml
programs/deviation-flagging-validator/: Cargo.toml
programs/deviation-flagging-validator/src/: arrayvec.rs  lib.rs
programs/ocr2/: Cargo.toml
programs/ocr2/src/: context.rs  lib.rs  state.rs
relayer/: go.mod  go.sum  package.json
scripts/: anchor-build-with-program-id.sh  anchor-build.sh  anchor-go-gen.sh  anchor-shell.sh  build-contract-artifacts-action.sh  install-solana-ci.sh  lib.sh  localnet.sh  programs-keys-cp.sh  programs-keys-gen.sh  setup-local-artifacts.sh  setup-local.sh  setup-staging.sh  tool-versions-to-env.sh  update-e2e.sh  update-solana-nix-hashes.sh  update-solana.sh
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tests/: .gitignore  README.md  go.mod  go.sum  lib.rs  ocr2.spec.ts  package.json  test.Dockerfile  test.Dockerfile.dockerignore
tools/: shell
ts/: LICENSE  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.cjs.json  tsconfig.json
v1/: .dockerignore  Cargo.toml  README.md  bridge.json  cli.Dockerfile  job.toml
v1/cli/: Cargo.toml
v1/cli/src/: feed.rs  main.rs  server.rs
v1/cli/src/monitor/: data.rs  metrics.rs  mod.rs  rdd.rs
v1/example/: Cargo.toml
v1/example/tests/: lib.rs
v1/flux-aggregator/: Cargo.toml
v1/flux-aggregator/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
v1/flux-aggregator/tests/: lib.rs
(+471 files in other folders)
