[package]
name = "chainlink-solana"
version = "0.1.0"
authors = ["Blaž Hrastnik <blaz@smartcontract.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9"
borsh-derive = "0.8.1"
solana-program = "~1.7.4"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
uint = "0.9"
bytemuck = "1.7"

[dev-dependencies]
solana-program-test = "~1.7.4"
solana-sdk = "~1.7.4"
serde = "1"
bincode = "1.3"

[lib]
name = "program"
crate-type = ["cdylib", "lib"]
