[workspace]
members = [
  "programs/*",
  "crates/*",
]

# exclude = ["programs/flux-aggregator"]

# [patch.crates-io]
# anchor-lang = { path = '../../anchor/lang' }

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
# -Znew-llvm-pass-manager

[profile.test]
overflow-checks = true
