[package]
name = "deviation-flagging-validator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "deviation_flagging_validator"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
access-controller = { version = "0.1.0", path = "../access-controller", default-features = false, features = ["cpi"] }
bytemuck = "1.7.2"
