[package]
name = "access-controller"
version = "1.0.1"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "access_controller"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
static_assertions = "1.1.0"
arrayvec = { version = "1.0.0", path = "../../crates/arrayvec" }
