[package]
name = "ocr2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "ocr2"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
mainnet = ["access-controller/mainnet", "store/mainnet"]
testnet = ["access-controller/testnet", "store/testnet"]
devnet = ["access-controller/devnet", "store/devnet"]
localnet = ["access-controller/localnet", "store/localnet"]
default = ["localnet"]

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
static_assertions = "1.1.0"
access-controller = { version = "0.1.0", path = "../access-controller", default-features = false, features = ["cpi"] }
store = { version = "0.1.0", path = "../store", default-features = false, features = ["cpi"] }
arrayref = "0.3.6"
arrayvec = { version = "0.1.0", path = "../../crates/arrayvec" }
bytemuck = "1.7"
