[package]
name = "store"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "store"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
access-controller = { version = "1.0.0", path = "../access-controller", default-features = false, features = ["cpi"] }
bytemuck = "1.7.2"
