[package]
name = "hello-world"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_world"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
mainnet = ["chainlink-solana/mainnet"]
testnet = ["chainlink-solana/testnet"]
devnet = ["chainlink-solana/devnet"]
localnet = ["chainlink-solana/localnet"]
default = ["localnet"]

[dependencies]
anchor-lang = "0.20.1"
chainlink-solana = { version = "0.1.0", package = "store", path = "../../../../programs/store", default-features = false, features = ["cpi"] }
